{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 9,
  "lineage": "83b2748d-56c7-0779-1d06-bd595f0a525b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "emby-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-02f3d2f3fbe403211",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f3d2f3fbe403211",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "emby",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03cbe180e270fdffb",
            "private_dns": "ip-10-0-1-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.213",
            "public_dns": "ec2-52-90-150-165.compute-1.amazonaws.com",
            "public_ip": "52.90.150.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8a12abda3d3e58c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ae78732eec775b9",
            "tags": {
              "Name": "emby-terraform"
            },
            "tags_all": {
              "Name": "emby-terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b20351030f5249da"
            ]
          },
          "dependencies": [
            "aws_key_pair.emby-key",
            "aws_security_group.emby_terraform_sg",
            "aws_subnet.emby-pub-1",
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "emby-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:internet-gateway/igw-08436f23e73a9b51d",
            "id": "igw-08436f23e73a9b51d",
            "owner_id": "741692307640",
            "tags": {
              "Name": "emby-IGW"
            },
            "tags_all": {
              "Name": "emby-IGW"
            },
            "vpc_id": "vpc-08c9757a4fef329a4"
          },
          "dependencies": [
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emby-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:route-table/rtb-0e0b7f0df7424374e",
            "id": "rtb-0e0b7f0df7424374e",
            "owner_id": "741692307640",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08436f23e73a9b51d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "emby-pub-RT"
            },
            "tags_all": {
              "Name": "emby-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c9757a4fef329a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.emby-IGW",
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emby-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf474fc62aaad867",
            "route_table_id": "rtb-0e0b7f0df7424374e",
            "subnet_id": "subnet-08ae78732eec775b9"
          },
          "dependencies": [
            "aws_internet_gateway.emby-IGW",
            "aws_route_table.emby-pub-RT",
            "aws_subnet.emby-pub-1",
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emby_terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-0b20351030f5249da",
            "description": "Group for emby server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b20351030f5249da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow emby port",
                "from_port": 8096,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8096
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow portainer port",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "emby-stack-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "emby-terraform-sg"
            },
            "tags_all": {
              "Name": "emby-terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c9757a4fef329a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emby-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-08ae78732eec775b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae78732eec775b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "emby-pub-1"
            },
            "tags_all": {
              "Name": "emby-pub-1"
            },
            "vpc_id": "vpc-08c9757a4fef329a4"
          },
          "dependencies": [
            "aws_vpc.emby-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "emby-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:vpc/vpc-08c9757a4fef329a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c54d6e0ced3f43a2",
            "default_route_table_id": "rtb-01067d738278be946",
            "default_security_group_id": "sg-0d6528c16d1dc9ea7",
            "dhcp_options_id": "dopt-0322a296ea1178cb0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c9757a4fef329a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01067d738278be946",
            "owner_id": "741692307640",
            "tags": {
              "Name": "emby-VPC"
            },
            "tags_all": {
              "Name": "emby-VPC"
            }
          }
        }
      ]
    }
  ]
}